# OfficialDocumentGenerator

./: .gitignore  CLAUDE.md  CUSTOM_DOMAIN_SETUP.md  EMAIL_PIPELINE.md  FRONTEND_DEPLOYMENT.md  LOCAL_DEVELOPMENT.md  LOGIN_SETUP.md  README.md  build.gradle.kts  buildspec.yml  deliveryFramework.md  openapi.yaml  pom.xml  settings.gradle.kts  template.yaml
.claude/commands/: brutal-review.md
docs/: EMAIL_PROCESSING.md
frontend/: .env.example  .env.production  .gitignore  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  AuthContext.tsx  AuthPage.css  AuthPage.tsx  ChangePassword.tsx  DocumentDetail.css  DocumentDetail.tsx  Documents.css  Documents.tsx  InstalledSkills.tsx  Login.css  Login.tsx  Marketplace.tsx  Projects.css  Projects.tsx  ProtectedRoute.tsx  RichEditor.css  RichEditor.tsx  SkillDetail.tsx  Skills.css  Welcome.css  Welcome.tsx  api.ts  auth.tsx  config.ts  index.css  main.tsx  mockApi.ts
infra/: amplify-frontend.yaml  app-only.yaml  buildspec.yaml  certificate-us-east-1.yaml  template.yaml  textract-temp.yaml
lambda/document-generator/: index.py  requirements.txt
lambda/email-filter/: index.py
lambda/sample-documents-api/: Cargo.toml
lambda/sample-documents-api/src/: main.rs  routes.rs
lambda/skills-api/: Cargo.toml
lambda/skills-api/src/: main.rs
scripts/: activate-ses-rules.sh  deploy-with-email.sh  list-received-emails.sh  query-email-metadata.sh  run-local-backend.sh  run-local-dev.sh  run-local-frontend.sh  setup-ses-dns.sh  update-allowlist.sh
writeTest/: sample-inspect.docx  新加坡永續旅遊採訪案.docx
(+167 files in other folders)
