[package]
name = "sample-documents-api"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1"
aws-sdk-dynamodb = "1"
aws-sdk-s3 = "1"
chrono = "0.4"
lambda_http = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
