[package]
name = "skills-api"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1"
aws-sdk-dynamodb = "1"
aws-sdk-s3 = "1"
lambda_http = "0.13"
pulldown-cmark = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
codegen-units = 16
lto = "thin"
